--- a/public/css/style.css
+++ b/public/css/style.css
@@ -170,7 +170,7 @@ body {
 }
 
 .main-picture.men {
-  background-image: url("../images/personell.jpg");
+  background-image: url("../images/personell.png");
   padding: 0;
   margin-top: 24px;
   margin-left: 24px;
