--- a/public/css/style.css
+++ b/public/css/style.css
@@ -178,7 +178,54 @@ body {
   background-size: cover;
   background-position: center center;
   width: calc(33.3333333333% - 48px);
+  position: relative;
 }
+.socialMedia {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 20;
+  gap: 4px;
+}
+.socialMedia a {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.instagram {
+  border-radius: 50%;
+  background-color: #dd4b39;
+}
+.facebook {
+  border-radius: 50%;
+
+  background-color: #3b5998;
+}
+.twitter {
+  border-radius: 50%;
+
+  background: #1da1f2;
+}
+.linkedin {
+  border-radius: 50%;
+  background: #0077b5;
+}
+/*
+.socialMedia a:hover {
+  color: rgb(249, 183, 58);
+  transition: all;
+  transition-duration: 0.3s;
+  transition-timing-function: ease-in-out;
+  scale: 1.1;
+} */
 
 .main-picture.woman {
   background-image: url("../images/woman.jpg");
