--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,7 +43,7 @@ Version: 1.0
 /* [ GENERAL ] */
 
 /*================================================== */
-
+@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@500;700&family=Roboto:wght@400;700&display=swap");
 body,
 html {
   font-size: 100%;
@@ -67,9 +67,27 @@ body {
   font-size: 0.9em;
   font-weight: 400;
 }
-
+.my-name-is {
+  color: #fff;
+  font-family: "Kanit", sans-serif;
+  text-decoration: underline;
+}
 .second-font {
-  font-family: "Lato", sans-serif;
+  /* font-family: "Lato", sans-serif; */
+  font-family: "Kanit", sans-serif;
+  font-size: 18px !important;
+  padding-right: 70px;
+
+  color: #e6e6e6ea;
+}
+@media screen and (max-width: 620px) {
+  .second-font {
+    /* font-family: "Lato", sans-serif; */
+
+    font-family: "Kanit", sans-serif;
+    font-size: 15px;
+    padding-right: 5px;
+  }
 }
 
 .p-none {
@@ -81,7 +99,7 @@ body {
 }
 
 .mb-0 {
-  margin-bottom: 0 !important;
+  margin-bottom: 0px;
 }
 
 .btn {
