--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,7 +43,7 @@ Version: 1.0
 /* [ GENERAL ] */
 
 /*================================================== */
-@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@500;700&family=Roboto:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@500;700&family=Roboto:wght@400;700&family=Rubik:wght@400;500;700&display=swap");
 body,
 html {
   font-size: 100%;
@@ -69,12 +69,11 @@ body {
 }
 .my-name-is {
   color: #fff;
-  font-family: "Kanit", sans-serif;
+  font-family: "Rubik", sans-serif;
   text-decoration: underline;
 }
 .second-font {
-  /* font-family: "Lato", sans-serif; */
-  font-family: "Kanit", sans-serif;
+  font-family: "Rubik", sans-serif;
   font-size: 18px !important;
   padding-right: 70px;
 
@@ -82,8 +81,6 @@ body {
 }
 @media screen and (max-width: 620px) {
   .second-font {
-    /* font-family: "Lato", sans-serif; */
-
     font-family: "Kanit", sans-serif;
     font-size: 15px;
     padding-right: 5px;
@@ -2499,5 +2496,23 @@ body.blog .pagination li a i {
 
   .resume-card-body-container {
     padding: 15px;
+  }
+}
+@media screen and (max-width: 1700px) {
+  div.bl-panel-items > div > div.row {
+    display: block;
+    width: 100%;
+    padding: 24px 0;
+  }
+  div.bl-panel-items > div > div.row div.section-padding-right-none.col {
+    max-width: 860px;
+    padding-right: 10px !important;
+  }
+  div.bl-panel-items > div > div.row div {
+    margin-bottom: 20px;
+    margin-top: 20px;
+    padding: 0px 10px;
+    margin-left: 0px !important;
+    width: 100% !important;
   }
 }
