--- a/styles/globals.css
+++ b/styles/globals.css
@@ -153,6 +153,7 @@ div.bl-panel-items > div {
   display: flex;
   flex: 1 1 30%;
   align-items: center;
+  height: 100%;
   justify-items: center;
 }
 
