--- a/public/css/style.css
+++ b/public/css/style.css
@@ -194,12 +194,11 @@ body {
 .main-picture.men {
   background-image: url("../images/personell.png");
   padding: 0;
-  margin-top: 24px;
-  margin-left: 24px;
-  height: calc(100vh - 48px);
+  /* margin-left: 24px; */
+  height: calc(100vh);
   background-size: cover;
   background-position: center center;
-  width: calc(33.3333333333% - 48px);
+  width: calc(33.3333333333% - 48px + 24px);
   position: relative;
 }
 .socialMedia {
