--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1413,8 +1413,8 @@ div.bl-panel-items a.btn {
 
 .carousel .indicators .indicator-item {
   background-color: #fff;
-  width: 13px;
-  height: 13px;
+  width: 10px;
+  height: 10px;
   margin: 24px 4px 16px;
 }
 
@@ -2547,4 +2547,18 @@ body.blog .pagination li a i {
 .row .col.xl4 img {
   width: 100%;
   height: 100%;
+}
+
+/* collection*/
+
+.photo-collection {
+  display: flex;
+  width: 100%;
+  gap: 2px;
+  flex-wrap: wrap;
+}
+.photo-collection img {
+  min-width: 200px;
+  flex-grow: 1;
+  width: 20%;
 }
